Fix use of address on sale